feat(api): CRUD client

--- a/FRONTEND/src/app/app.component.html
+++ b/FRONTEND/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div id="main">
-    <h1>TP04</h1>
+    <h1>Angular App</h1>
     <app-tetiere></app-tetiere>
     <router-outlet></router-outlet>
     <app-footer></app-footer>
